--- a/.github/workflows/Experience.yaml
+++ b/.github/workflows/Experience.yaml
@@ -79,18 +79,18 @@ epicgames-claimer:
           python-version: 3.x
       - name: Clone
         run: git clone --depth 1 https://github.com/luminoleon/epicgames-claimer Experience
+             pip3 install -r Experience/requirements.txt
       - name: Experience
         id: epic_experience
         env:
           EPIC_MAIL: ${{ secrets.EPIC_MAIL }}
           EPIC_PASS: ${{ secrets.EPIC_PASS }}
         run: |
-          cd Experience && pip3 install -r requirements.txt
           sudo sh install_dependencies.sh
       - name: main
         if: steps.epic_experience.outputs.status == 'Error'
         run: python main.py  -u $EPIC_MAIL -p $EPIC_PASS
-        
+
   pojie:
     name: 52Pojie Experience
     runs-on: ubuntu-latest
