--- a/.github/workflows/Experience.yaml
+++ b/.github/workflows/Experience.yaml
@@ -80,18 +80,16 @@ epicgames-claimer:
       - name: Clone
         run: git clone --depth 1 https://github.com/luminoleon/epicgames-claimer Experience
              pip3 install -r Experience/requirements.txt
+             sudo sh install_dependencies.sh
       - name: Experience
-        id: epic_experience
+        id: Experience
         env:
           EPIC_MAIL: ${{ secrets.EPIC_MAIL }}
           EPIC_PASS: ${{ secrets.EPIC_PASS }}
-        run: |
-          sudo sh install_dependencies.sh
       - name: main
-        if: steps.epic_experience.outputs.status == 'Error'
         run: python main.py  -u $EPIC_MAIL -p $EPIC_PASS
 
-  pojie:
+521pojie:
     name: 52Pojie Experience
     runs-on: ubuntu-latest
     steps:
